Added links to contact, about me, and portfolio pages.

--- a/about.html
+++ b/about.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <p>This is a sample file.</p>
-    <a href="index.html">Go to About Page</a>
+    <a href="index.html">Go to Home Page</a>
 </body>
 </html>
