--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300&display=swap" rel="stylesheet">
     <title>Get to Know Me</title>
     </head>
 
@@ -12,7 +13,10 @@
     </header>
 
     <div id="test">
-      <p>This is a test box.</p>
+      <p>This will be my navigation bar.</p>
+      <a title="About Me" target="_blank" href="index.html">About Me</a>
+      <a title="Contact" target="_blank" href="contact.html">Contact</a>
+      <a title="Portfolio" target="_blank" href="portfolio.html">Portfolio</a>
     </div>
 
     <div id="div">
