--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
+  <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300&display=swap" rel="stylesheet">
     <title>Get to Know Me</title>
-    </head>
+  </head>
 
   <body>
     <header id="header">
@@ -65,6 +65,12 @@
             <li><strong>Portfolio:</strong> <a href="#">Coming Soon!</a></li>
           </ul>
       </section>
+
+      <footer>
+        <p>Posted by: Loren Kolstad</p>
+        <p>Contact Me: <a href="mailto:lorenkolstad@gmail.com">
+        Loren Kolstad</a>.</p>
+      </footer>
     </div>
   </body>
 </html>
