Added pseudo class information to the CSS that I can try later.

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       <footer>
         <p>Posted by: Loren Kolstad</p>
         <p>Contact Me: <a href="mailto:lorenkolstad@gmail.com">
-        Loren Kolstad</a>.</p>
+        Loren Kolstad</a></p>
       </footer>
     </div>
   </body>
