My last push doesn't appear to have worked, so attempting again.

--- a/contact.html
+++ b/contact.html
@@ -25,19 +25,32 @@
     
     </div>
   </header>
-  
-    <h1>Placeholding Contact Me Form</h1>
-    <p>Also a test</p>
-    <h2>This is another test.</h2>
+
+  <section>
+
+    <div class="box">
+      
+        <form>
+            First name:<br>
+            <input type="text" name="firstname"><br>
+            Last name:<br>
+            <input type="text" name="lastname">
+        </form>
+
+    </div>
+  </section>
 
 
-<div>
-    <footer class="footer">
-        <p>Posted by: Loren Kolstad</p>
-        <p>Contact Me: <a href="mailto:lorenkolstad@gmail.com">
-        Loren Kolstad</a></p>
-    </footer>
-</div>
+    <div>
+      <footer class="footer">
+        <h2>Contact Info:</h2>
+        <ul>
+          <li><strong>Email:</strong> <a href="mailto:lorenkolstad@gmail.com?Subject=Hello%20" target="_top">Say Hello!</a></li>
+          <li><strong>Github:</strong> <a href="https://github.com/lorenkolstad" target="_blank">lorenkolstad</a></li>
+          <li><strong>Portfolio:</strong> <a href="#">Coming Soon!</a></li>
+        </ul>
+      </footer>
+    </div>
 
-</body>
+  </body>
 </html>
