The last push messed up my CSS and didn't pull all of the elements. Attempting again.

--- a/portfolio.html
+++ b/portfolio.html
@@ -39,7 +39,7 @@
         <img id="image" src="assets/images/headshot.jpg" height="200" width="200">
 
         <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. In imperdiet consectetur nisi quis tincidunt. Curabitur a dolor auctor libero efficitur molestie a non purus. Pellentesque nec cursus nibh, ac molestie magna. Cras nisl orci, ultrices vel tellus nec, mattis auctor purus. Cras ac mi pulvinar, mattis diam eu, faucibus augue. Cras tempus nulla eu risus hendrerit, a condimentum est mollis. In dictum interdum ligula eget vestibulum. Fusce ullamcorper nibh non luctus vestibulum.
+        The last push didn't work, so updating this line of text and trying another push.
         </p>
 
     </div>
