Added additional fields to the contact page.

--- a/contact.html
+++ b/contact.html
@@ -32,9 +32,13 @@
       
         <form>
             First name:<br>
-            <input type="text" name="firstname"><br>
+            <input type="text1" name="firstname"><br>
             Last name:<br>
-            <input type="text" name="lastname">
+            <input type="text2" name="lastname"><br>
+            Email:<br>
+            <input type="text3" name="email"><br>
+            Message:<br>
+            <input type="text4" name="message"><br>
         </form>
 
     </div>
