--- a/portfolio.html
+++ b/portfolio.html
@@ -47,17 +47,23 @@
 
           <div class="port3">
             <img class="image" src="assets/images/flowers.jpg" height="200" width="200">
-            <div class="trivia">Trivia Game</div>
+            <div class="trivia">
+              <p>Trivia Game</p>
+            </div>
           </div>
 
           <div class="port4">
             <img class="image" src="assets/images/bee.jpg" height="200" width="200">
-            <div class="rut">Rutgers Info Widget</div>
+            <div class="rut">
+              <p>Rutgers Info Widget</p>
+            </div>
           </div>
 
           <div class="port5">
             <img class="image" src="assets/images/bee-1.jpg" height="200" width="200">
-            <div class="rock">Rock Paper Scisors</div>
+            <div class="rock">
+              <p>Rock Paper Scissors</p>
+            </div>
           </div>
 
         </div>
