Added a paragraph about me to the index.html to replace the filler text.

--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
         </p>
       
         <img id="image" src="assets/images/headshot.jpg" height="200" width="200">
-
+ 
         <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. In imperdiet consectetur nisi quis tincidunt. Curabitur a dolor auctor libero efficitur molestie a non purus. Pellentesque nec cursus nibh, ac molestie magna. Cras nisl orci, ultrices vel tellus nec, mattis auctor purus. Cras ac mi pulvinar, mattis diam eu, faucibus augue. Cras tempus nulla eu risus hendrerit, a condimentum est mollis. In dictum interdum ligula eget vestibulum. Fusce ullamcorper nibh non luctus vestibulum.
+          I am allergic to cats, yet I have two. I live downtown, visit coffee shops way too frequently, and love going to live shows. I listen to all sorts of music, so if you have suggestions, please let me know (unless it’s Country.. no offense). I really enjoy photography, so if any of you either like to be in front of the camera, or also like to take photos, scroll down to the bottom of the page and “Say Hello!”. Additionally, I spend a lot of my free time outdoors and traveling. Some of my favorite places are South Yuba, Carmel, Stinson, Belize, and the Virgin Islands (so far). I am ecstatic to be learning coding, as I hope it brings me the freedom to work from my laptop doing something that I won’t get bored with after a few years.  
         </p>
 
     </div>
