--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
+    <!--<link rel="stylesheet" type="text/css" href="assets/css/reset.css">-->
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Barlow+Semi+Condensed|Cinzel|Cormorant+Garamond&display=swap" rel="stylesheet">
     
