Adding to my portfolio. Added LinkedIn url, added resume folder, attempted to incorporate Materialize, but I haven't figured out how to get it not to override my CSS - even though mine is linked after it in the head of the HTML. Still need to add in my portfolio, but haven't figured out how I'd like them to display yet. I really like the style of my webpage, so I don't want to change a whole lot of it.

--- a/index.html
+++ b/index.html
@@ -2,9 +2,17 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <!--<link rel="stylesheet" type="text/css" href="assets/css/reset.css">-->
-    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
+    <!-- Google Fonts: Cinzel -->
     <link href="https://fonts.googleapis.com/css?family=Barlow+Semi+Condensed|Cinzel|Cormorant+Garamond&display=swap" rel="stylesheet">
+
+    <!-- Materialized: Compiled and minified CSS -->
+    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"> -->
+
+    <!-- Portfolio CSS -->
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     
     <title>Get to Know Me</title>
   </head>
@@ -51,12 +59,26 @@
       <footer class="footer">
         <h2>Contact Info:</h2>
         <ul>
-          <li><strong>Email:</strong> <a href="mailto:lorenkolstad@gmail.com?Subject=Hello%20" target="_top">Say Hello!</a></li>
+          <li><strong>Email:</strong> <a href="mailto:lorenkolstad@gmail.com?Subject=Hello%20" target="_top">Send an Email</a></li>
           <li><strong>Github:</strong> <a href="https://github.com/lorenkolstad" target="_blank">lorenkolstad</a></li>
+          <li><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/loren-kolstad-43472253" target="_blank">Let's Connect</a></li>
           <li><strong>Portfolio:</strong> <a href="#">Coming Soon!</a></li>
         </ul>
       </footer>
     </div>
 
+
+  <!-- jQuery CDN -->
+  <script
+  src="https://code.jquery.com/jquery-3.4.1.js"
+  integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
+  crossorigin="anonymous"></script>
+
+  <!-- Firebase -->
+  <script src="https://www.gstatic.com/firebasejs/7.3.0/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/7.3.0/firebase-database.js"></script>
+
+  <!-- Portfolio javaScript -->
+  <script src="./assets/javascript/javascript.js"></script>
   </body>
 </html>
