--- a/contact.html
+++ b/contact.html
@@ -31,18 +31,28 @@
       <form action="action_page.php">
         <div class="row">
           <div class="col-25">
-            <label for="fname">Name:</label>
+            <label for="fname">First Name:</label>
           </div>
           <div class="col-75">
-            <input type="text" id="name" name="name" placeholder="Your name..">
+            <input type="text" id="firstName" name="firstName" placeholder="First name..">
           </div>
         </div>
+
+        <div class="row">
+          <div class="col-25">
+            <label for="lname">Last Name:</label>
+          </div>
+          <div class="col-75">
+            <input type="text" id="lastName" name="lastName" placeholder="Last name..">
+          </div>
+        </div>
+
         <div class="row">
           <div class="col-25">
             <label for="email">Email:</label>
           </div>
           <div class="col-75">
-            <input type="text" id="email" name="email" placeholder="Your email..">
+            <input type="text" id="email" name="email" class="validate" placeholder="Your email..">
           </div>
         </div>
         
@@ -56,9 +66,10 @@
         </div>
 
         <div class="row">
-          <form method="post" action="mailto:lorenkolstad@gmail.com" >
-          <input type="submit" value="Send Email" /> </form>
-        </div>
+          <div>
+            <button type="submit" class="button" id="submit">Let's connect!>                
+            <!-- <input type="submit" id="submit" value="Let's Connect!" />       -->
+          </div>
       </form>
     </div>
 
